fix(footer): links are now correctly displayed on tablet

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -111,6 +111,9 @@
                 grid-column: 2/-1;
                 grid-row: 1/2;
                 min-height: 100%;
+                flex-direction: column;
+                justify-content: space-around;
+                display: flex;
                 flex-wrap: wrap;
             }
             @include shared.desktop-only {
@@ -124,12 +127,18 @@
             }
         }
         ul li:nth-child(1){
+            @include shared.tablet-only{
+                min-width: 40%;
+            }
             @include shared.desktop-only{
                 grid-column: 1/4;
                 grid-row: 1
             }
         }
         ul li:nth-child(2){
+            @include shared.tablet-only{
+                min-width: 40%;
+            }
             @include shared.desktop-only{
                 grid-column: 1/4;
             }
@@ -164,7 +173,7 @@
             @include shared.tablet-only{
                 font-size: shared.$tablet-reading-font-size;
                 line-height: 2.25 * shared.$tablet-spacing;
-                margin-bottom: 1.6rem;
+                margin-bottom: 1.2rem;
             }
             @include shared.desktop-only {
                 font-size: shared.$desktop-reading-font-size;
